--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/bootstrap.js"></script>
     </head>
     <body>
+       <!--lavinia invata git in leela-->
         <header class="row justify-content-center color ">
           <nav class="navbar navbar-expand-sm ">
             <div class="container">
